--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,7 @@
     background-image: url("../../public/heroe.webp");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     text-shadow: black 0 2px;
   }
 </style>
