--- a/src/components/Wrapper.astro
+++ b/src/components/Wrapper.astro
@@ -1,93 +1,36 @@
+---
+import Github from "../components/Github.astro";
+import Extensiones from "../components/Extensiones.astro";
+---
+
 <>
   <section class="[grid-area:b] border-white border-2 rounded-2xl"></section>
-  <section
-    class="[grid-area:c] c flex flex-col justify-center gap-1 rounded-2xl p-2 text-center opacity-90"
-  >
-    <h2 class="text-xl font-bold border-b-2 text-amber-100">Mis extensiones</h2>
-    <h3 class="text-lg">Visual Studio</h3>
-    <ul class="grid grid-cols-2 justify-items-center gap-2">
-      <li>
-        <a href=""
-          ><img class="h-10 w-10" src="../../public/emojisense.png" alt="" /></a
-        >
-      </li>
-      <li>
-        <a href=""
-          ><img class="h-10 w-10" src="../../public/ErrorLens.png" alt="" /></a
-        >
-      </li>
-      <li>
-        <a href=""
-          ><img
-            class="h-10 w-10"
-            src="../../public/Imagepreview.png"
-            alt=""
-          /></a
-        >
-      </li>
-      <li>
-        <a href=""
-          ><img
-            class="h-10 w-10"
-            src="../../public/MaterialIconTheme.png"
-            alt=""
-          /></a
-        >
-      </li>
-      <li>
-        <a href=""
-          ><img class="h-10 w-10" src="../../public/OneDarkPro.png" alt="" /></a
-        >
-      </li>
-      <li>
-        <a href=""
-          ><img class="h-10 w-10" src="../../public/Prettier.png" alt="" /></a
-        >
-      </li>
-    </ul>
-    <h3 class="text-lg">Navegador</h3>
-    <ul class="grid grid-cols-2 justify-items-center gap-4">
-      <li>
-        <a href=""
-          ><img
-            class="h-10 w-10"
-            src="../../public/JSONFormatter.png"
-            alt=""
-          /></a
-        >
-      </li>
-      <li>
-        <a href=""
-          ><img
-            class="h-10 w-10"
-            src="../../public/MaterialIconTheme.png"
-            alt=""
-          /></a
-        >
-      </li>
-    </ul>
-  </section>
+  <Extensiones />
   <section class="[grid-area:d] border-white border-2 rounded-2xl"></section>
-  <section class="[grid-area:e] border-white border-2 rounded-2xl"></section>
-  <section class="[grid-area:f] f">
-    <h2
-      class="absolute text-3xl font-bold text-white z-10 p-3 pointer-events-none"
-    >
-      GitHub!!
-    </h2>
-    <a class="opacity-50" href="https://github.com/PabloZottola"
-      ><img
-        class="h-full rounded-2xl"
-        src="../../public/github.gif"
-        alt=""
-      /></a
-    >
+  <section class="[grid-area:e] e flex flex-col gap-3 rounded-2xl p-4">
+    <h2 class="text-xl font-bold border-b-2 w-3/5 text-amber-100">Estudios</h2>
+    <h3 class="text-sm font-bold">
+      <a
+        target="_blank"
+        href="https://web.rollingcodeschool.com/wp-content/uploads/2023/10/Programa-Fullstack-2023.pdf"
+        >RollingCode-FULL STACK</a
+      >
+    </h3>
+
+    <h3 class="text-sm font-bold">
+      <a
+        target="_blank"
+        href="https://web.rollingcodeschool.com/wp-content/uploads/2023/11/Programa-React-Avanzado-2023.pdf"
+        >RollingCode-REACT AVANZADO</a
+      >
+    </h3>
   </section>
+  <Github />
 </>
 
 <style>
-  .c {
-    background-image: url("../../public/extensiones.png");
+  .e {
+    background-image: url("../../public/estudios.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
