--- a/src/components/Github.astro
+++ b/src/components/Github.astro
@@ -4,7 +4,11 @@
   >
     GitHub!!
   </h2>
-  <a class="opacity-50" href="https://github.com/PabloZottola"
-    ><img class="h-full rounded-2xl" src="../../public/github.gif" alt="" /></a
+  <a target="_blank" class="opacity-50" href="https://github.com/PabloZottola"
+    ><img
+      class="w-full h-full object-cover rounded-2xl"
+      src="../../public/github.gif"
+      alt=""
+    /></a
   >
 </section>
