--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Wrapper from "../components/Wrapper.astro";
 <Layout title="Pablo Zóttola - Porfolio">
   <main
     id="app"
-    class="grid grid-cols-5 grid-rows-5 h-screen max-w-6xl m-auto p-6 gap-4"
+    class="animate-fade-left grid grid-cols-5 grid-rows-5 h-screen max-w-6xl m-auto p-6 gap-4"
   >
     <Header />
     <Wrapper />
@@ -20,8 +20,8 @@ import Wrapper from "../components/Wrapper.astro";
       grid-template-areas:
         "a a a b b"
         "a a a b b"
-        "c d d b b"
-        "c d d b b"
+        "c d i b b"
+        "c d h h h"
         "e e f g g";
     }
   </style>
