--- a/src/components/Github.astro
+++ b/src/components/Github.astro
@@ -1,4 +1,4 @@
-<section class="[grid-area:f] f">
+<section class="[grid-area:f] animate-delay-[2100ms] animate-fade">
   <h2
     class="absolute text-3xl font-bold text-white z-10 p-3 pointer-events-none"
   >
