--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="[grid-area:a] rounded-2xl">
+<header class="[grid-area:a] rounded-2xl animate-fade-right">
   <section
     class="flex flex-col item gap-4 justify-center p-4 h-full opacity-85"
   >
