--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Wrapper from "../components/Wrapper.astro";
 <Layout title="Pablo Zóttola - Porfolio">
   <main
     id="app"
-    class="animate-fade-left grid grid-cols-5 grid-rows-5 h-screen max-w-6xl m-auto p-6 gap-4"
+    class="grid grid-cols-5 grid-rows-5 h-screen max-w-6xl m-auto p-6 gap-4"
   >
     <Header />
     <Wrapper />
