--- a/src/components/Estudios.astro
+++ b/src/components/Estudios.astro
@@ -1,4 +1,6 @@
-<section class="[grid-area:e] e flex flex-col gap-3 rounded-2xl p-4 opacity-90">
+<section
+  class="[grid-area:e] e flex flex-col gap-3 rounded-2xl p-4 opacity-90 animate-delay-[900ms] animate-fade-right"
+>
   <h2 class="text-xl font-bold border-b-2 w-3/5 text-amber-100">Estudios</h2>
   <h3 class="text-sm font-bold">
     <a
