--- a/src/components/Extensiones.astro
+++ b/src/components/Extensiones.astro
@@ -1,5 +1,5 @@
 <section
-  class="[grid-area:c] flex flex-col justify-center gap-1 rounded-2xl p-2 text-center opacity-90"
+  class="[grid-area:c] flex flex-col justify-center gap-1 rounded-2xl p-2 text-center opacity-90 animate-delay-[300ms] animate-fade-right"
 >
   <h2 class="text-xl font-bold border-b-2 text-amber-100">Mis extensiones</h2>
   <h3 class="text-lg">Visual Studio</h3>
