--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,4 @@
-<footer class="[grid-area:g] border-white border-2 rounded-2xl"></footer>
+<footer
+  class="[grid-area:g] border-white border-2 rounded-2xl animate-delay-[2400ms] animate-fade-left"
+>
+</footer>
