--- a/src/components/Wrapper.astro
+++ b/src/components/Wrapper.astro
@@ -5,13 +5,24 @@ import Estudios from "../components/Estudios.astro";
 ---
 
 <>
-  <section class="[grid-area:b] border-white border-2 rounded-2xl"></section>
+  <section
+    class="[grid-area:b] border-white border-2 rounded-2xl animate-delay-[600ms] animate-fade-left"
+  >
+  </section>
   <Extensiones />
-  <section class="[grid-area:d] border-white border-2 rounded-2xl"></section>
+  <section
+    class="[grid-area:d] border-white border-2 rounded-2xl animate-delay-[1800ms] animate-fade"
+  >
+  </section>
   <Estudios />
   <Github />
-  <section class="[grid-area:h] border-white border-2 rounded-2xl"></section>
-  <section class="[grid-area:i] i rounded-2xl opacity-90">
+  <section
+    class="[grid-area:h] border-white border-2 rounded-2xl animate-delay-[1200ms] animate-fade-left"
+  >
+  </section>
+  <section
+    class="[grid-area:i] i rounded-2xl opacity-90 animate-delay-[1500ms] animate-fade"
+  >
     <a target="_blank" href="https://www.linkedin.com/in/pablo-zottola/"
       ><h2
         class="absolute text-xl font-bold text-white z-10 p-3 pointer-events-none"
