--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
-<header class="[grid-area:a] rounded-2xl animate-fade-right">
+<header class="[grid-area:a] animate-fade-right">
   <section
-    class="flex flex-col item gap-4 justify-center p-4 h-full opacity-85"
+    class="flex flex-col gap-4 justify-center p-4 h-full opacity-90 rounded-2xl"
   >
     <h1 class="text-[47px] font-bold leading-tight w-4/5">
       Hola!, me llamo <span class="text-amber-100">Pablo Zóttola</span>
@@ -18,7 +18,7 @@
 </header>
 
 <style>
-  header {
+  section {
     background-image: url("../../public/heroe.webp");
     background-repeat: no-repeat;
     background-size: cover;
