--- a/src/components/Wrapper.astro
+++ b/src/components/Wrapper.astro
@@ -2,14 +2,12 @@
 import Github from "../components/Github.astro";
 import Extensiones from "../components/Extensiones.astro";
 import Estudios from "../components/Estudios.astro";
+import Proyectos from "../components/Proyectos.astro";
 ---
 
 <>
-  <section
-    class="[grid-area:b] border-white border-2 rounded-2xl animate-delay-[600ms] animate-fade-left"
-  >
-  </section>
   <Extensiones />
+  <Proyectos />
   <section
     class="[grid-area:d] border-white border-2 rounded-2xl animate-delay-[1800ms] animate-fade"
   >
