--- a/src/components/Estudios.astro
+++ b/src/components/Estudios.astro
@@ -1,22 +1,24 @@
 <section
-  class="[grid-area:e] e flex flex-col gap-3 rounded-2xl p-4 opacity-90 animate-delay-[900ms] animate-fade-right"
+  class="[grid-area:e] rounded-2xl animate-delay-[900ms] animate-fade-right"
 >
-  <h2 class="text-xl font-bold border-b-2 w-3/5 text-amber-100">Estudios</h2>
-  <h3 class="text-sm font-bold">
-    <a
-      target="_blank"
-      href="https://web.rollingcodeschool.com/wp-content/uploads/2023/10/Programa-Fullstack-2023.pdf"
-      >RollingCode - FULL STACK</a
-    >
-  </h3>
+  <div class="flex flex-col gap-3 p-4 opacity-90 h-full">
+    <h2 class="text-xl font-bold border-b-2 w-3/5 text-amber-100">Estudios</h2>
+    <h3 class="text-sm font-bold">
+      <a
+        target="_blank"
+        href="https://web.rollingcodeschool.com/wp-content/uploads/2023/10/Programa-Fullstack-2023.pdf"
+        >RollingCode - FULL STACK</a
+      >
+    </h3>
 
-  <h3 class="text-sm font-bold">
-    <a
-      target="_blank"
-      href="https://web.rollingcodeschool.com/wp-content/uploads/2023/11/Programa-React-Avanzado-2023.pdf"
-      >RollingCode - REACT AVANZADO</a
-    >
-  </h3>
+    <h3 class="text-sm font-bold">
+      <a
+        target="_blank"
+        href="https://web.rollingcodeschool.com/wp-content/uploads/2023/11/Programa-React-Avanzado-2023.pdf"
+        >RollingCode - REACT AVANZADO</a
+      >
+    </h3>
+  </div>
 </section>
 
 <style>
