--- a/src/components/Extensiones.astro
+++ b/src/components/Extensiones.astro
@@ -1,65 +1,77 @@
 <section
-  class="[grid-area:c] flex flex-col justify-center gap-1 rounded-2xl p-2 text-center opacity-90 animate-delay-[300ms] animate-fade-right"
+  class="[grid-area:c] rounded-2xl animate-delay-[300ms] animate-fade-right"
 >
-  <h2 class="text-xl font-bold border-b-2 text-amber-100">Mis extensiones</h2>
-  <h3 class="text-lg">Visual Studio</h3>
-  <ul class="grid grid-cols-2 justify-items-center gap-2">
-    <li>
-      <a href=""
-        ><img class="h-10 w-10" src="../../public/indenticator.png" alt="" /></a
-      >
-    </li>
-    <li>
-      <a href=""
-        ><img class="h-10 w-10" src="../../public/ErrorLens.png" alt="" /></a
-      >
-    </li>
-    <li>
-      <a href=""
-        ><img class="h-10 w-10" src="../../public/Imagepreview.png" alt="" /></a
-      >
-    </li>
-    <li>
-      <a href=""
-        ><img
-          class="h-10 w-10"
-          src="../../public/MaterialIconTheme.png"
-          alt=""
-        /></a
-      >
-    </li>
-    <li>
-      <a href=""
-        ><img class="h-10 w-10" src="../../public/OneDarkPro.png" alt="" /></a
-      >
-    </li>
-    <li>
-      <a href=""
-        ><img class="h-10 w-10" src="../../public/Prettier.png" alt="" /></a
-      >
-    </li>
-  </ul>
-  <h3 class="text-lg">Navegador</h3>
-  <ul class="grid grid-cols-2 justify-items-center gap-4">
-    <li>
-      <a href=""
-        ><img
-          class="h-10 w-10"
-          src="../../public/JSONFormatter.png"
-          alt=""
-        /></a
-      >
-    </li>
-    <li>
-      <a href=""
-        ><img
-          class="h-10 w-10"
-          src="../../public/MaterialIconTheme.png"
-          alt=""
-        /></a
-      >
-    </li>
-  </ul>
+  <div
+    class="flex flex-col justify-center gap-1 p-2 text-center opacity-90 h-full"
+  >
+    <h2 class="text-xl font-bold border-b-2 text-amber-100">Mis extensiones</h2>
+    <h3 class="text-lg">Visual Studio</h3>
+    <ul class="grid grid-cols-2 justify-items-center gap-2">
+      <li>
+        <a href=""
+          ><img
+            class="h-10 w-10"
+            src="../../public/indenticator.png"
+            alt=""
+          /></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><img class="h-10 w-10" src="../../public/ErrorLens.png" alt="" /></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><img
+            class="h-10 w-10"
+            src="../../public/Imagepreview.png"
+            alt=""
+          /></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><img
+            class="h-10 w-10"
+            src="../../public/MaterialIconTheme.png"
+            alt=""
+          /></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><img class="h-10 w-10" src="../../public/OneDarkPro.png" alt="" /></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><img class="h-10 w-10" src="../../public/Prettier.png" alt="" /></a
+        >
+      </li>
+    </ul>
+    <h3 class="text-lg">Navegador</h3>
+    <ul class="grid grid-cols-2 justify-items-center gap-4">
+      <li>
+        <a href=""
+          ><img
+            class="h-10 w-10"
+            src="../../public/JSONFormatter.png"
+            alt=""
+          /></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ><img
+            class="h-10 w-10"
+            src="../../public/MaterialIconTheme.png"
+            alt=""
+          /></a
+        >
+      </li>
+    </ul>
+  </div>
 </section>
 
 <style>
